Development
	Make control box reappear when going out of fullscreen using only keyboard
	Make control box slide away when fullscreen.
	Make "Set Subtitle" option actually work
	Couple of minor changes to the Set Subtitle code
	Updated French translation from Starcrasher
	Make the OSD level change on the fly when selecting it in the preferences page
	When selecting OSD Level, use words rather than numbers to display level
	Popup warning if we can't load the subtitle file
	Add "Edit->Set Subtitle" menu in
	Update License text on About box
	Handle "Unable to open DVD" messages and give warning to display
	Add some stuff to the About dialog
	Fix some translation items
	Rework File Menu a little bit
	Restore playlist visibility when coming out of fullscreen
	Handle dbus messages from /org/gnome/SettingsDaemon/MediaKeys
	Switch softvol from gint to gboolean
	Update schema to provide missing forcecache and softvol options
	Make File->Details data have only values of active media
	Make File->Details sensitive when Media Data becomes available
	Document Keyboard Shortcuts in file DOCS/keyboard_shortcuts.txt
	Updated French Translation
	Fix install code so that it works during an rpmbuild
	Fix install code so that gnome-mplayer.schema is properly installed when installing from source
	Add gconf key /apps/gnome-mplayer/preferences/disablecontextmenu to set default value of --disablecontextmenu
	Add gconf key /apps/gnome-mplayer/preferences/disablefullscreen to set default value of --disablefullscreen
	Add commandline option "--disablefullscreen", which disables all fullscreen options
	Purge GtkWidget 'song_title', not used anymore
	Add subtitle delay hotkeys of z & x
	Fix problem with CD playback where either CDDB can't be reached or CD not found
	Hopefully fix the code so it can compile on FreeBSD
	Detect mntent.h in configure process
	Fix crash when mplayer is not in the path
	Version bump
	Updated pt_BR translation